@@ -4,7 +4,7 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
 
 	<groupId>com.relevantcodes</groupId>
 	<artifactId>extentreports</artifactId>
-	<version>1.2.1</version>
+	<version>1.3</version>
 	<packaging>jar</packaging>
 
 	<name>ExtentReports for Selenium</name>
@@ -22,9 +22,9 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
 	</licenses>
 	
 	<scm>
-		<connection>scm:git:https://github.com/relevantcodes/extentreports.git</connection>
-		<developerConnection>scm:git:https://github.com/relevantcodes/extentreports.git</developerConnection>
-		<url>https://github.com/relevantcodes/extentreports</url>
+		<connection>scm:git:https://github.com/anshooarora/extentreports.git</connection>
+		<developerConnection>scm:git:https://github.com/anshooarora/extentreports.git</developerConnection>
+		<url>https://github.com/anshooarora/extentreports</url>
 	</scm>
 	
 	<developers>
@@ -37,19 +37,99 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
 			</roles> 
 		</developer>
 	</developers>
-	
-	<contributors>
-		<contributor>
-			<name>Bas Dijkstra</name>
-			<url>http://www.ontestautomation.com/</url>
-			<id>bas.dijkstra</id>
-		</contributor>
-	</contributors>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
-
+				
+	<profiles>
+		<profile>
+			<id>release-sign-artifacts</id>
+			<activation>
+				<property>
+					<name>performRelease</name>
+					<value>true</value>
+				</property>
+			</activation>
+			<properties>
+				<gpg.keyname>F6C0B27B</gpg.keyname>	<!-- GPG Key ID to use for signing -->
+				<release.username>anshooarora</release.username> <!-- username for our svn repository -->
+			</properties>
+			<build>
+				<resources>
+					<!--<resource>
+						<directory>src/</directory>
+					</resource>-->
+				</resources>
+				<plugins>
+					<!--
+						Enable signing of the artifacts For gpg:sign-and-deploy-file it's
+						necessary to have a <server> with the repositoryId provided or
+						id="remote-repository" defined in settings.xml (it contains the
+						repository's login, psw) Signing: mvn gpg:sign-and-deploy-file
+						-DpomFile=target/myapp-1.0.pom \ > -Dfile=target/myapp-1.0.jar \ >
+						-Durl=http://oss.sonatype.org/content/repositories/malyvelky/ \ >
+						-DrepositoryId=sonatype_oss Note normally it uses the defaul key
+						but we can ovveride it by either setting the property gpg.keyname
+						(done in this POM) or by providing -Dkeyname=66AE163A on the
+						command line. OR directly w/ gpg: gpg -u 66AE163A - -sign -
+						-detach-sign -a target/dbunit-embeddedderby-parenttest.jar Note:
+						"mvn gpg:sign" results in NPE with v 1.o-a.-4, use "mvn package
+						gpg:sign" instead; see the issue MGPG-18
+					-->
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-gpg-plugin</artifactId>
+						<version>1.0-alpha-4</version>
+						<executions>
+							<execution>
+								<id>sign-artifacts</id>
+								<phase>verify</phase>
+								<goals>
+									<goal>sign</goal>
+								</goals>
+								<configuration>
+									<sources>
+										<source>src/</source>
+									</sources>
+								</configuration>
+							</execution>
+						</executions>
+					</plugin>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-resources-plugin</artifactId>
+						<version>2.3</version>
+					</plugin>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-source-plugin</artifactId>
+						<executions>
+							<execution>
+								<id>attach-sources</id>
+								<goals>
+									<goal>jar</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-javadoc-plugin</artifactId>
+						<executions>
+							<execution>
+								<id>attach-javadocs</id>
+								<goals>
+									<goal>jar</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
+	
 	<distributionManagement>
 		<snapshotRepository>
 			<id>ossrh</id>
