@@ -91,3 +91,6 @@ ExtentReports 1.2 <03-17-2015>
 	
 ExtentReports 1.2.1 <03-30-2015>
 	Updated license details to BSD
+	
+ExtentReports 1.3 <>
+	Several styling fixes
